# Testovoe

./: BUILD.sh  LAUNCH.sh  README.md  sql_scripts.txt
auto_client/: build.sh  launch.sh  tcp_client  tcp_client.cpp
client/: CMakeLists.txt  launch.sh  protocol.hpp  tcp_client  tcp_client.cpp
server/: CMakeLists.txt  build.sh  db_handler.cpp  db_handler.hpp  launch.sh  main.cpp  parser.hpp  server.cpp  server.hpp  session.cpp  session.hpp  tcp_server  user.cpp  user.hpp
